{
    "name": "PinballWizardsControls",
    "maps": [
        {
            "name": "Player",
            "id": "af05d1f9-abef-461f-800a-685a10d6473e",
            "actions": [
                {
                    "name": "LeftPaddle",
                    "type": "Button",
                    "id": "53fefc3e-a70f-4938-9d52-242c2a4f6719",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "RightPaddle",
                    "type": "Button",
                    "id": "7e9ee5b9-5575-4e03-9208-74042fa97927",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f26ee3ac-e515-4c05-b5c4-de14c9dbed0a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "LeftPaddle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b6146e5-dda9-4352-8f34-c3d186fe010e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "RightPaddle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KBM",
            "bindingGroup": "KBM",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}